--- a/index.html
+++ b/index.html
@@ -390,14 +390,14 @@
       <div class="container">
         <div class="footer-row">
           <div class="social-links-row footer-social">
-            <a href="#!">
+            <a href="https://github.com/saiful-islam-bk">
               <img
                 src="img/social_icons/github.svg"
                 alt="Link to GitHub account"
               />
             </a>
 
-            <a href="#!">
+            <a href="https://www.linkedin.com/in/saiful-islam-bk/">
               <img
                 src="img/social_icons/linkedin.svg"
                 alt="Link to linkedin profile"
@@ -408,13 +408,13 @@
               <img src="img/social_icons/xing.svg" alt="Link to Xing profile" />
             </a>
 
-            <a href="#!">
+            <a href="https://www.facebook.com/islam.saiful.bk">
               <img
                 src="img/social_icons/facebook.svg"
                 alt="Link to facebook profile"
             /></a>
 
-            <a href="#!">
+            <a href="https://www.instagram.com/islam.saiful.bk/">
               <img
                 src="img/social_icons/instagram.svg"
                 alt="Link to instagram profile"
