--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           </div>
 
           <div class="footer-copyright">
-            <p>&copy; Copyright Saiful Islam 2025<img src="img/hero/hero.png" width="444" height="504" alt="">ng" width="544" height="604" alt=""></p>
+            <p text-align="center">&copy; Copyright Saiful Islam 2025</p>
           </div>
         </div>
       </div>
