--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
       </div>
     </section>
 
-<!--     <section id="contact" class="contact">
+     <section id="contact" class="contact">
       <div class="container">
         <div class="contact-title">
           <h2 class="title">Contact</h2>
@@ -351,7 +351,7 @@
           </p>
         </div>
 
-        <form class="contactForm" data-aos="zoom-in" data-aos-duration="1000">
+       <!-- <form class="contactForm" data-aos="zoom-in" data-aos-duration="1000">
           <div class="input-box">
             <input type="text" name="name" placeholder="Name" required />
             <input
@@ -382,9 +382,7 @@
             </button>
           </div>
         </form>
-        <div class="response"></div>
-      </div>
-    </section> -->
+         -->
     <form
   class="contactForm"
   action="https://formspree.io/f/xdkggqlj"  <!-- এই লাইনটা তোমার ফর্মের URL দিয়ে রিপ্লেস করো -->
@@ -420,7 +418,9 @@
     </button>
   </div>
 </form>
-
+<div class="response"></div>
+</div>
+</section>
     <footer class="footer">
       <div class="container">
         <div class="footer-row">
