--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
       ></textarea>
     
       <!-- Redirect after submit (optional) -->
-      <input type="hidden" name="_redirect" value="https://saiful-islam-bk.github.io/portfolio2/thanks.html" />
+<!--       <input type="hidden" name="_redirect" value="https://saiful-islam-bk.github.io/portfolio2/thanks.html" /> -->
     
       <div
         class="contact-button"
