--- a/index.html
+++ b/index.html
@@ -384,7 +384,14 @@
             Let's talk and work together!
           </p>
         </div>
-    <form
+        <form action="https://formspree.io/f/xdkggqlj" method="POST">
+  <input name="name" />
+  <input name="email" />
+  <textarea name="message"></textarea>
+  <button type="submit">Send</button>
+</form>
+
+<!--     <form
       class="contactForm"
       action="https://formspree.io/f/xdkggqlj"
       method="POST"
@@ -418,7 +425,7 @@
           Send Message
         </button>
       </div>
-    </form>
+    </form> -->
   <div class="response"></div>
   </div>
 </section>
