--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
       <!-- Redirect after submit (optional) -->
 <!--       <input type="hidden" name="_redirect" value="https://saiful-islam-bk.github.io/portfolio2/thanks.html" /> -->
     
-      <div
+<!--       <div
         class="contact-button"
         data-aos="fade-zoom-in"
         data-aos-easing="ease-in-out"
@@ -425,7 +425,7 @@
           Send Message
         </button>
       </div>
-    </form> -->
+    </form>  -->
   <div class="response"></div>
   </div>
 </section>
