--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               vision to life!
             </p>
             <div class="about-download-btn">
-              <a href="file/CV_Saiful.pdf" class="btn btn-white">Download CV</a>
+              <a href="cv.pdf" class="btn btn-white">Download CV</a>
             </div>
           </div>
           <div
